new block impressions

--- a/yes/app/sass/blocks/flex.scss
+++ b/yes/app/sass/blocks/flex.scss
@@ -11,4 +11,9 @@
   &--teachers {
     align-items: stretch;
   }
+  
+  &--plan {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
