--- a/yes/app/sass/style.scss
+++ b/yes/app/sass/style.scss
@@ -14,3 +14,5 @@
 @import 'blocks/desc';
 @import 'blocks/teachers';
 @import 'blocks/program';
+@import 'blocks/plan';
+@import 'blocks/impressions';
