--- a/yes/app/sass/blocks/impressions.scss
+++ b/yes/app/sass/blocks/impressions.scss
@@ -1,5 +1,20 @@
 .impressions {
-  padding: 80px 0 0 0;
+  position: relative;
+  padding: 80px 0;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -300px;
+    right: 150px;
+    width: 600px;
+    height: 600px;
+    border: 100px solid #f5f5f5;
+    border-radius: 50%;
+    box-sizing: border-box;
+    animation: 1s decorate-bounce infinite alternate;
+    z-index: -1;
+  }
 }
 
 .impressions__heading {
@@ -9,15 +24,24 @@
   text-transform: uppercase;
 }
 
+.impressions__wrapper {
+  // width: 100%;
+  overflow-x: scroll;
+}
+
 .impressions__list {
+  display: flex;
+  width: 3510px;
   margin: 70px 0 0 0;
-  padding: 0;
+  padding: 0 0 30px 0;
   list-style: none;
 }
 
 .impressions__item {
   display: flex;
   align-items: flex-start;
+  width: 100%;
+  padding: 0 50px 0 0;
 }
 
 .impressions__img {
