--- a/yes/app/sass/global/base.scss
+++ b/yes/app/sass/global/base.scss
@@ -11,6 +11,24 @@ body {
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: $main-red; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: darken($main-red, 5%);
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {}
