--- a/yes/app/sass/style.scss
+++ b/yes/app/sass/style.scss
@@ -17,3 +17,6 @@
 @import 'blocks/plan';
 @import 'blocks/impressions';
 @import 'blocks/footer';
+
+@import 'blocks/popup';
+@import 'blocks/overlay';
