--- a/yes/app/sass/blocks/popup.scss
+++ b/yes/app/sass/blocks/popup.scss
@@ -2,9 +2,11 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  padding: 120px 140px;
+  width: 950px;
+  padding: 120px 0;
   text-align: center;
   background: #fff;
+  box-sizing: border-box;
   transition: 0.3s;
   transform: translateX(-50%) translateY(-50%);
   
@@ -15,6 +17,10 @@
   &--inactive {
     z-index: -1;
     opacity: 0;
+  }
+  
+  &--map {
+    padding: 50px 30px 30px 30px;
   }
 }
 
