--- a/yes/app/sass/blocks/desc.scss
+++ b/yes/app/sass/blocks/desc.scss
@@ -5,12 +5,12 @@
   &::before {
     content: '';
     position: absolute;
-    top: -80px;
+    top: -200px;
     right: 0;
     width: 900px;
     height: 610px;
     background: url('../img/desc-mockup.png') no-repeat center / cover;
-    z-index: -1;
+    // z-index: -1;
   }
 }
 
@@ -72,7 +72,7 @@
     
     &::before {
       // display: none;
-      top: -100px;
+      top: -250px;
       right: 0;
       width: 650px;
       height: 450px;
