--- a/yes/app/sass/blocks/nav.scss
+++ b/yes/app/sass/blocks/nav.scss
@@ -1,9 +1,3 @@
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .nav__logo {
   // display: block;
   // width: 100px;
@@ -22,9 +16,9 @@
 }
 
 .nav__list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
   width: 650px;
   margin: 0;
   padding: 0;
@@ -66,5 +60,28 @@
   &:focus {
     box-shadow: 2px 10px 30px 0 rgba(245, 17, 44, 0.2);
     transform: translateY(-5px);
+  }
+}
+
+@media screen and ($tablet-widths) {
+  .nav__list {
+    width: 600px;
+  }
+  
+  .nav__link,
+  .nav__callback {
+    font-size: 16px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .nav__list {
+    flex-direction: column;
+    width: auto;
+  }
+  
+  .nav__link,
+  .nav__callback {
+    font-size: 14px;
   }
 }
