--- a/yes/app/sass/blocks/teachers.scss
+++ b/yes/app/sass/blocks/teachers.scss
@@ -31,7 +31,7 @@
   0% {}
   
   100% {
-    transform: translateX(1000px);
+    transform: translateX(800px);
   }
 }
 
@@ -50,7 +50,7 @@
 }
 
 .teachers__item {
-  // width: 350px;
+  width: 350px;
   margin: 0 30px 0 0;
   transition: 0.3s;
   
@@ -62,7 +62,7 @@
       content: '';
       position: absolute;
       top: -150px;
-      right: -150px;
+      right: 50px;
       width: 300px;
       height: 300px;
       border: 60px solid #f5f5f5;
@@ -81,8 +81,8 @@
 }
 
 .teachers__photo {
-  width: 100%;
-  height: 300px;
+  max-width: 100%;
+  height: auto;
   margin: 0 0 20px 0;
 }
 
@@ -110,13 +110,23 @@
     }
   }
   
+  .teachers {
+    
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
+  
   .teachers__item {
+    width: 330px;
+    margin: 0 auto 30px auto;
     
     &:last-child {
+      margin: 0 auto 30px auto;
       
       &::before {
-        top: -200px;
-        right: 100px;
+        display: none;
       }
     }
   }
