--- a/yes/app/sass/blocks/title.scss
+++ b/yes/app/sass/blocks/title.scss
@@ -1,30 +1,13 @@
 .title {
   position: relative;
   // padding: 0 0 100px 0;
-}
-
-.title__decoration {
-  position: absolute;
-  top: 0;
-  color: #f5f5f5;
-  font-size: 370px;
-  font-weight: 800;
-  user-select: none;
-  z-index: -1;
-  word-wrap: break-word;
-}
-
-.title__mockup {
-  position: relative;
-  width: 600px;
-  height: 800px;
-  background: url('../img/bus-mockup.png') no-repeat center;
+  background: url('../img/title-bg.png') no-repeat 0 50px / contain;
   
   &::before {
     content: '';
     position: absolute;
-    top: 30%;
-    left: -100px;
+    top: 35%;
+    left: 10%;
     width: 85px;
     height: 85px;
     border: 15px solid $main-blue;
@@ -32,6 +15,23 @@
     box-sizing: border-box;
     animation: 1s decorate-bounce infinite alternate;
   }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 15%;
+    right: 25%;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: $main-blue;
+    animation: 2s decorate-bounce infinite alternate;
+  }
+}
+
+.title__mockup {
+  max-width: 100%;
+  height: auto;
 }
 
 @keyframes decorate-fill {
@@ -49,13 +49,11 @@
   &::before {
     content: '';
     position: absolute;
-    top: -70px;
-    right: 200px;
-    width: 20px;
+    bottom: 100px;
+    right: 0;
+    width: 145px;
     height: 20px;
-    border-radius: 50%;
-    background: $main-blue;
-    animation: 2s decorate-bounce infinite alternate;
+    background: url('../img/svg/wave.svg') no-repeat center;
   }
 }
 
@@ -82,4 +80,34 @@
   margin: 20px 0 90px 0;
   font-size: 18px;
   font-weight: 300;
+}
+
+@media screen and ($tablet-widths) {  
+  .title__mockup {
+    margin: auto;
+  }
+  
+  // .title__heading {
+  //   font-size: 35px;
+  // }
+  // 
+  // .title__small {
+  //   font-size: 30px;
+  // }
+  
+  .title__content {
+    margin: auto;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .title__decoration {
+    display: none;
+  }
+  
+  .title__mockup {
+    width: 100%;
+    height: 500px;
+    background: url('../img/bus-mockup.png') no-repeat center / contain;
+  }
 }
