--- a/yes/app/sass/blocks/overlay.scss
+++ b/yes/app/sass/blocks/overlay.scss
@@ -4,18 +4,15 @@
   right: 0;
   bottom: 0;
   left: 0;
-  // width: 100%;
-  // height: 100%;
   background: rgba(0, 0, 0, 0.6);
   cursor: pointer;
   transition: 0.3s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 5;
   
   &--active {
-    z-index: 5;
-  }
-  
-  &--inactive {
-    z-index: -1;
-    opacity: 0;
+    opacity: 1;
+    visibility: visible;
   }
 }
