--- a/yes/app/sass/blocks/impressions.scss
+++ b/yes/app/sass/blocks/impressions.scss
@@ -17,21 +17,13 @@
   }
 }
 
-.impressions__heading {
-  margin: 0 0 30px 0;
-  font-size: 45px;
-  font-weight: 800;
-  text-transform: uppercase;
-}
-
 .impressions__wrapper {
-  // width: 100%;
   overflow-x: scroll;
 }
 
 .impressions__list {
   display: flex;
-  width: 3510px;
+  width: 300%;
   margin: 70px 0 0 0;
   padding: 0 0 30px 0;
   list-style: none;
@@ -41,12 +33,15 @@
   display: flex;
   align-items: flex-start;
   width: 100%;
-  padding: 0 50px 0 0;
+  margin: 0 50px 0 0;
 }
 
 .impressions__img {
+  width: 165px;
+  height: 165px;
   margin: 0 60px 0 0;
   border-radius: 5px;
+  object-fit: cover;
 }
 
 .impressions__name {
