--- a/yes/app/sass/blocks/plan.scss
+++ b/yes/app/sass/blocks/plan.scss
@@ -3,89 +3,70 @@
   background: url('../img/plan-bg.png') no-repeat top / cover;
 }
 
-.plan__heading {
-  margin: 0 0 30px 0;
-  font-size: 45px;
-  font-weight: 800;
-  text-transform: uppercase;
-}
-
 .plan__list {
   margin: 100px 0 0 0;
   padding: 0;
-  // list-style: url('../img/svg/red-arrow.svg');
 }
 
 .plan__item {
-  position: relative;
-  display: flex;
-  flex-direction: column;
   width: 100%;
   margin: 0 0 50px 0;
-  padding: 100px 0;
   
   &:nth-child(2n) {
-    align-items: flex-end;
-    text-align: right;
-  }
-  
-  &:last-child {
-    margin: 0;
-  }
-  
-  &--1,
-  &--3 {
     
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 555px;
-      height: 333px;
-      border-radius: 5px;
+    .plan__content {
+      order: 2;
+    }
+    
+    .plan__mockup {
+      order: 1;
     }
   }
-  
-  &--2,
-  &--4 {
-    
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 555px;
-      height: 333px;
-      border-radius: 5px;
-    }
-  }
+}
 
+.plan__content {
+  position: relative;
+  width: 45%;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -120px;
+    color: #e9e9e9;
+    font-size: 100px;
+    font-weight: 800;
+    opacity: 0.6;
+  }
+  
   &--1 {
     
-    &::after {
-      background: url('../img/plan-1.jpg') no-repeat center / cover;
+    &::before {
+      content: 'просто';
+      left: 50px;
     }
   }
   
   &--2 {
     
     &::before {
-      background: url('../img/plan-2.jpg') no-repeat center / cover;
+      content: 'общение';
+      right: 50px;
     }
   }
   
   &--3 {
     
-    &::after {
-      background: url('../img/plan-3.jpg') no-repeat center / cover;
+    &::before {
+      content: 'практика';
+      left: 50px;
     }
   }
   
   &--4 {
     
     &::before {
-      background: url('../img/plan-4.jpg') no-repeat center / cover;
+      content: 'повтор';
+      right: 50px;
     }
   }
 }
@@ -98,58 +79,44 @@
 }
 
 .plan__text {
-  position: relative;
-  width: 500px;
   padding: 0 0 0 30px;
   font-size: 18px;
   font-weight: 300;
   line-height: 25px;
-  
-  &::after {
-    content: '';
-    position: absolute;
-    top: -120px;
-    left: 0;
-    color: #e9e9e9;
-    font-size: 100px;
-    font-weight: 800;
-    opacity: 0.6;
-  }
+}
+
+.plan__mockup {
+  width: 45%;
+  height: 330px;
+  border-radius: 5px;
   
   &--1 {
-    
-    &::after {
-      content: 'просто';
-      left: 50px;
-    }
+    background: url('../img/plan-1.jpg') no-repeat center / cover;
   }
   
   &--2 {
-    
-    &::after {
-      content: 'общение';
-      right: 50px;
-    }
+    background: url('../img/plan-2.jpg') no-repeat center / cover;
   }
   
   &--3 {
-    
-    &::after {
-      content: 'практика';
-      left: 50px;
-    }
+    background: url('../img/plan-3.jpg') no-repeat center / cover;
   }
   
   &--4 {
-    
-    &::after {
-      content: 'повтор';
-      right: 50px;
-    }
+    background: url('../img/plan-4.jpg') no-repeat center / cover;
   }
 }
 
 @media screen and ($tablet-widths) {  
+  .plan__content {
+    
+    &::before {
+      // left: 0;
+      top: -90px;
+      font-size: 70px;
+    }
+  }
+  
   .plan__text {
     
     &--2 {
