--- a/yes/app/sass/blocks/program.scss
+++ b/yes/app/sass/blocks/program.scss
@@ -46,26 +46,6 @@
   }
 }
 
-.program__heading {
-  position: relative;
-  margin: 0 0 30px 0;
-  font-size: 45px;
-  font-weight: 800;
-  text-transform: uppercase;
-  z-index: 5;
-  
-  &::before {
-    content: '?';
-    position: absolute;
-    top: -140px;
-    left: 560px;
-    color: #e9e9e9;
-    font-size: 300px;
-    font-weight: 800;
-    z-index: 2;
-  }
-}
-
 .program__price {
   margin: 30px 0 15px 0;
   color: $main-red;
@@ -105,8 +85,9 @@
 @media screen and ($tablet-widths) {
   .program {
     
-    &::before {
-      display: none;
+    &::after {
+      top: auto;
+      bottom: 20px;
     }
   }
 }
