--- a/yes/app/sass/style.scss
+++ b/yes/app/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import 'blocks/hidden';
 @import 'blocks/header';
+@import 'blocks/heading';
 @import 'blocks/nav';
 @import 'blocks/title';
 @import 'blocks/flex';
