--- a/yes/app/sass/blocks/nav.scss
+++ b/yes/app/sass/blocks/nav.scss
@@ -1,6 +1,4 @@
 .nav__logo {
-  // display: block;
-  // width: 100px;
   font-size: 50px;
   font-weight: 800;
   transition: 0.3s;
@@ -15,10 +13,20 @@
   color: $main-red;
 }
 
+.nav__toggle {
+  position: relative;
+  display: none;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  border: none;
+  background: url('../img/svg/menu.svg') no-repeat center / cover;
+  z-index: 8;
+}
+
 .nav__list {
-  // display: flex;
-  // align-items: center;
-  // justify-content: space-between;
   width: 650px;
   margin: 0;
   padding: 0;
@@ -75,13 +83,27 @@
 }
 
 @media screen and ($mobile-widths) {
+  .nav__toggle {
+    display: block;
+  }
+  
   .nav__list {
-    flex-direction: column;
-    width: auto;
+    
+    &--mobile {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: auto;
+      background: #fff;
+      transform: translateY(-100%);
+      z-index: 7;
+    }
   }
   
   .nav__link,
   .nav__callback {
-    font-size: 14px;
+    font-size: 18px;
   }
 }
