--- a/yes/app/sass/blocks/plan.scss
+++ b/yes/app/sass/blocks/plan.scss
@@ -128,4 +128,41 @@
   }
 }
 
-@media screen and ($mobile-widths) {}
+@media screen and ($mobile-widths) {
+  .plan {
+    padding: 60px 0 100px 0;
+  }
+  
+  .plan__item {
+    text-align: center;
+    
+    &:nth-child(2n) {
+      
+      .plan__content {
+        order: 0;
+      }  
+    }  
+  }
+  
+  .plan__content {
+    
+    &::before {
+      display: none;
+    }
+  }
+  
+  .plan__name {
+    font-size: 14px;
+  }
+  
+  .plan__text {
+    margin: 0 0 20px 0;
+    padding: 0;
+    font-size: 14px;
+  }
+  
+  .plan__mockup {
+    width: 100%;
+    height: 170px;
+  }
+}
