--- a/yes/app/sass/blocks/teachers.scss
+++ b/yes/app/sass/blocks/teachers.scss
@@ -124,4 +124,8 @@
   }
 }
 
-@media screen and ($mobile-widths) {}
+@media screen and ($mobile-widths) {
+  .teachers__item {
+    width: auto;
+  }
+}
