--- a/yes/app/sass/blocks/program.scss
+++ b/yes/app/sass/blocks/program.scss
@@ -96,6 +96,13 @@
   .program {
     padding: 0;
     
+    &::before {
+      left: 0;
+      width: 300px;
+      height: 300px;
+      border: 50px solid #f5f5f5;
+    }
+    
     &::after {
       top: 50px;
       right: 100px;
@@ -119,6 +126,10 @@
   
   .program__price {
     font-size: 25px;
+  }
+  
+  .program__list {
+    width: auto;
   }
   
   .program__desc,
