--- a/yes/app/sass/blocks/plan.scss
+++ b/yes/app/sass/blocks/plan.scss
@@ -130,7 +130,11 @@
 
 @media screen and ($mobile-widths) {
   .plan {
-    padding: 60px 0 100px 0;
+    padding: 60px 0;
+  }
+  
+  .plan__list {
+    margin: 50px 0 0 0;
   }
   
   .plan__item {
