--- a/yes/app/sass/blocks/program.scss
+++ b/yes/app/sass/blocks/program.scss
@@ -97,6 +97,7 @@
     padding: 0;
     
     &::before {
+      top: 100px;
       left: 0;
       width: 300px;
       height: 300px;
@@ -104,10 +105,9 @@
     }
     
     &::after {
-      top: 50px;
-      right: 100px;
+      top: -100px;
+      left: 50px;
       bottom: auto;
-      left: auto;
     }
   }
   
