--- a/yes/app/sass/blocks/nav.scss
+++ b/yes/app/sass/blocks/nav.scss
@@ -24,6 +24,7 @@
   border: none;
   background: url('../img/svg/menu.svg') no-repeat center / cover;
   z-index: 8;
+  outline: none;
   transition: 0.3s;
 }
 
@@ -105,10 +106,12 @@
     
     &--mobile {
       position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
+      // top: 0;
+      // right: 0;
+      // bottom: 0;
+      // left: 0;
+      width: 100%;
+      height: 100%;
       background: #fff;
       // transform: translateY(-100%);
       z-index: 7;
