--- a/yes/app/sass/blocks/nav.scss
+++ b/yes/app/sass/blocks/nav.scss
@@ -106,10 +106,10 @@
     
     &--mobile {
       position: fixed;
-      // top: 0;
+      top: 0;
       // right: 0;
       // bottom: 0;
-      // left: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       background: #fff;
