--- a/yes/app/sass/blocks/heading.scss
+++ b/yes/app/sass/blocks/heading.scss
@@ -13,7 +13,7 @@
       content: '?';
       position: absolute;
       top: -140px;
-      right: -170px;
+      left: 270px;
       color: #e9e9e9;
       font-size: 300px;
       font-weight: 800;
