--- a/yes/app/sass/blocks/situation.scss
+++ b/yes/app/sass/blocks/situation.scss
@@ -35,6 +35,12 @@
   }
 }
 
+.situation__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .situation__box {
   position: relative;
   width: 800px;
