--- a/study-canada/app/sass/variables.scss
+++ b/study-canada/app/sass/variables.scss
@@ -1,5 +1,5 @@
-$main-red: #f5112c;
-$main-black: #141414;
+$main-red: #dd0505;
+$main-gray: #3c3c3c;
 $main-blue: #2429ff;
 
 $mobile-widths: 'max-width: 768px';
