--- a/study-canada/app/sass/style.scss
+++ b/study-canada/app/sass/style.scss
@@ -2,3 +2,14 @@
 
 @import 'global/base';
 @import 'global/fonts';
+
+@import 'blocks/flex';
+@import 'blocks/title';
+@import 'blocks/header';
+@import 'blocks/button';
+@import 'blocks/nav';
+@import 'blocks/waiting';
+@import 'blocks/heading';
+@import 'blocks/choice';
+@import 'blocks/program';
+@import 'blocks/footer';
