--- a/study-canada/app/sass/blocks/waiting.scss
+++ b/study-canada/app/sass/blocks/waiting.scss
@@ -1,5 +1,19 @@
 .waiting {
   padding: 45px 0 60px 0;
+  
+  &--bg {
+    position: relative;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: -100px;
+      right: 0;
+      width: 419px;
+      height: 762px;
+      background: url('../img/canada-bg.png') no-repeat center / cover;
+    }
+  }
 }
 
 .waiting__list {
@@ -21,10 +35,16 @@
   
   &--short {
     width: 45%;
+    box-sizing: border-box;
   }
   
   &--right {
     margin: 60px 0 130px 55%;
+  }
+  
+  &--icon {
+    padding: 0 0 0 120px;
+    background: url('../img/program-bg.png') no-repeat left / 90px 90px;
   }
 }
 
