--- a/study-canada/app/sass/global/base.scss
+++ b/study-canada/app/sass/global/base.scss
@@ -30,9 +30,9 @@ body {
 }
 
 @media screen and ($tablet-widths) {
-  // .container {
-  //   width: 100%;
-  // }
+  .container {
+    width: 100%;
+  }
 }
 
 @media screen and ($mobile-widths) {}
