--- a/study-canada/app/sass/blocks/choice.scss
+++ b/study-canada/app/sass/blocks/choice.scss
@@ -12,6 +12,7 @@
       width: 419px;
       height: 762px;
       background: url('../img/canada-bg.png') no-repeat center / cover;
+      z-index: 2;
     }
   }
 }
@@ -33,7 +34,9 @@
   border-radius: 20px;
   box-sizing: border-box;
   box-shadow: 0px 0px 9px 0px rgba(35, 31, 32, 0.3);
+  background: #fff;
   transition: 0.3s;
+  z-index: 5;
   
   &:hover {
     box-shadow: 0px 0px 20px 0px rgba(35, 31, 32, 0.3);
@@ -52,4 +55,26 @@
   font-size: 24px;
   font-weight: bold;
   text-align: center;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .choice {
+    
+    &--bg {
+      
+      &::after {
+        display: none;
+      }
+    }
+  }
+  
+  .choice__list {
+    margin: 0;
+  }
+  
+  .choice__item {
+    margin: 0 0 30px 0;
+  }
 }
