--- a/study-canada/app/sass/blocks/waiting.scss
+++ b/study-canada/app/sass/blocks/waiting.scss
@@ -1,5 +1,6 @@
 .waiting {
-  padding: 45px 0 60px 0;
+  padding-top: 45px;
+  padding-bottom: 60px;
   
   &--bg {
     position: relative;
@@ -12,6 +13,7 @@
       width: 419px;
       height: 762px;
       background: url('../img/canada-bg.png') no-repeat center / cover;
+      z-index: -1;
     }
   }
 }
@@ -103,4 +105,83 @@
   color: $main-gray;
   font-size: 18px;
   font-weight: normal;
+}
+
+@media screen and ($tablet-widths) {
+  .waiting {
+    
+    &--bg {
+      
+      &::after {
+        display: none;
+      }
+    }
+  }
+  
+  .waiting__list {
+    
+    &--unbullet {
+      background-size: 380px;
+    }
+  }
+  
+  .waiting__item {
+    
+    &--right {
+      margin: 30px 0 30px 55%;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .waiting__subheading {
+    display: block;
+    text-align: center;
+  }
+  
+  .waiting__list {
+    
+    &--unbullet {
+      background: none;
+    }
+  }
+  
+  .waiting__item {
+    
+    &--short {
+      width: 100%;
+      margin: 0 0 30px 0;
+    }
+    
+    &--right {
+      margin: 0;
+    }
+  }
+  
+  .waiting__name {
+    
+    &--uppercase {
+      text-align: center;
+    }
+  }
+  
+  .waiting__column {
+    width: 100%;
+    order: 1;
+  }
+  
+  .waiting__img {
+    align-self: center;
+    
+    &--1 {
+      width: 300px;
+      height: 290px;
+    }
+    
+    &--2 {
+      width: 300px;
+      height: 290px;
+      background: url('../img/waiting-img-2.jpg') no-repeat center / contain;
+    }
+  }
 }
