--- a/study-canada/app/sass/blocks/program.scss
+++ b/study-canada/app/sass/blocks/program.scss
@@ -13,8 +13,8 @@
 }
 
 .program__item {
-  width: 50%;
-  margin: 0 0 35px 0;
+  width: 570px;
+  margin: 0 auto 35px auto;
   padding: 15px;
   border-radius: 20px;
   background: url('../img/program-bg.png') no-repeat top right;
