--- a/study-canada/app/sass/blocks/heading.scss
+++ b/study-canada/app/sass/blocks/heading.scss
@@ -27,3 +27,13 @@
     margin: 0;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .heading {
+    margin: 0 0 20px 0;
+    font-size: 25px;
+    text-align: center;
+  }
+}
