--- a/study-canada/app/sass/style.scss
+++ b/study-canada/app/sass/style.scss
@@ -12,4 +12,6 @@
 @import 'blocks/heading';
 @import 'blocks/choice';
 @import 'blocks/program';
+@import 'blocks/schedule';
+@import 'blocks/request';
 @import 'blocks/footer';
