--- a/study-canada/app/sass/blocks/choice.scss
+++ b/study-canada/app/sass/blocks/choice.scss
@@ -28,6 +28,9 @@
 }
 
 .choice__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 260px;
   height: 230px;
   padding: 30px 0;
@@ -46,7 +49,7 @@
 
 .choice__logo {
   display: block;
-  margin: 0 auto 40px auto;
+  margin: 0 auto;
 }
 
 .choice__name {
