--- a/aur/app/sass/style.scss
+++ b/aur/app/sass/style.scss
@@ -1,6 +1,7 @@
+@import 'variables';
+
 @import 'global/base';
 @import 'global/fonts';
-@import 'global/variables';
 
 @import 'blocks/main';
 @import 'blocks/nav';
