--- a/yes/app/sass/global/base.scss
+++ b/yes/app/sass/global/base.scss
@@ -1,7 +1,7 @@
 body {
   min-width: 320px;
   margin: 0;
-  font-family: 'Gilroy', 'Open Sans', sans-serif;
+  font-family: 'Gilroy', 'Arial', sans-serif;
 }
 
 .container {
