--- a/aur/app/sass/blocks/main.scss
+++ b/aur/app/sass/blocks/main.scss
@@ -1,7 +1,28 @@
 .main {
   display: flex;
-  // justify-content: space-between;
-  transition: 0.5s;
+  transition: 0.3s;
+  
+  &--blur {
+    filter: blur(5px);
+  }
+  
+  &--light {
+    
+    .nav {
+      background: #fff;
+    }
+    
+    .nav__item {
+      
+      a {
+        color: #131216;
+      }
+    }
+    
+    .header {
+      background: darken(#fff, 5%);
+    }
+  }
 }
 
 .main__column {
