--- a/aur/app/sass/blocks/nav.scss
+++ b/aur/app/sass/blocks/nav.scss
@@ -6,6 +6,8 @@
   height: 100vh;
   padding: 55px 40px 40px 100px;
   background: #131216;
+  box-sizing: border-box;
+  transition: 0.3s;
 }
 
 .nav__list {
