--- a/aur/app/sass/blocks/popup.scss
+++ b/aur/app/sass/blocks/popup.scss
@@ -3,9 +3,16 @@
   top: 0;
   width: 100%;
   height: 100%;
-  clip: rect(0, 0, 0, 0);
   transition: 0.5s;
   background: rgba(0, 0, 0, 0.7);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+  
+  &--show {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .popup__container {
@@ -24,8 +31,7 @@
   padding: 0;
   font-size: 0;
   border: none;
-  background: transparent url('../img/close.svg') no-repeat center;
-  // Крестик так и экспортнулся
+  background: transparent url('../img/close.svg') no-repeat center / cover;
 }
 
 .popup__name {
