--- a/study-canada/app/sass/blocks/program.scss
+++ b/study-canada/app/sass/blocks/program.scss
@@ -59,7 +59,7 @@
 
 @media screen and ($mobile-widths) {
   .program__item {
-    width: 100%;
+    width: 300px;
     box-shadow: 0px 0px 9px 0px rgba(35, 31, 32, 0.3);
   }
   
