--- a/study-media/app/sass/blocks/header.scss
+++ b/study-media/app/sass/blocks/header.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.9);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.15);
+  z-index: 1;
 }
