--- a/study-media/app/sass/blocks/title.scss
+++ b/study-media/app/sass/blocks/title.scss
@@ -1,11 +1,11 @@
 .title {
+  padding: 230px 0 130px 0;
   background: url('../img/title-bg.png') no-repeat top left;
 }
 
 .title__content {
   width: 560px;
   margin: 0 0 0 auto;
-  padding: 230px 0 0 0;
 }
 
 .title__name {
