--- a/study-media/app/sass/blocks/button.scss
+++ b/study-media/app/sass/blocks/button.scss
@@ -13,9 +13,14 @@
   background: $main-red;
   transition: 0.3s;
   
-  &:hover {
+  &:hover,
+  &:focus {
     box-shadow: 0px 1px 13px 0px rgba(255, 0, 25, 0.81);
     transform: translateY(-5px);
+  }
+  
+  &--center {
+    margin: auto;
   }
 }
 
