--- a/study-media/app/sass/style.scss
+++ b/study-media/app/sass/style.scss
@@ -9,3 +9,8 @@
 @import 'blocks/title';
 @import 'blocks/button';
 @import 'blocks/edge';
+@import 'blocks/square';
+@import 'blocks/video';
+@import 'blocks/start';
+@import 'blocks/advantages';
+@import 'blocks/slider';
