--- a/study-media/app/sass/blocks/edge.scss
+++ b/study-media/app/sass/blocks/edge.scss
@@ -1,5 +1,5 @@
 .edge {
-  padding: 120px 0 0 0;
+  padding: 120px 0;
 }
 
 .edge__flex {
@@ -19,55 +19,6 @@
   font-size: 70px;
   font-weight: normal;
   font-family: 'Sylfaen', sans-serif;
-}
-
-.edge__decorate {
-  position: absolute;
-  top: -40px;
-  left: -130px;
-  width: 200px;
-  height: 200px;
-  background: #ffe3a6;
-  transform: rotate(-45deg);
-  z-index: -1;
-  
-  &::before {
-    content: '';
-    position: absolute;
-    top: 20px;
-    right: 0;
-    width: 300px;
-    height: 5px;
-    background: #ffa800;
-    animation: edge-decorate-left 2s infinite alternate;
-  }
-  
-  &::after {
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 300px;
-    height: 5px;
-    background: #dd0505;
-    animation: edge-decorate-right 2s infinite alternate;
-  }
-}
-
-@keyframes edge-decorate-left {
-  0% {}
-  
-  100% {
-    right: -100px;
-  }
-}
-
-@keyframes edge-decorate-right {
-  0% {}
-  
-  100% {
-    left: -100px;
-  }
 }
 
 .edge__text {
@@ -118,37 +69,4 @@
   100% {
     transform: rotate(-80deg);
   }
-}
-
-.edge__photo {
-  box-sizing: border-box;
-  width: 100%;
-  height: 265px;
-  margin: 0 0 30px 0;
-  border-left: 15px solid $main-yellow;
-  background: url('../img/edge-photo.jpg') no-repeat 0 -150px / cover;
-}
-
-.edge__list {
-  @include display-flex;
-  @include clear-list;
-  justify-content: space-between;
-  margin: 0 0 65px 0;
-  border-left: 2px solid $main-yellow;
-}
-
-.edge__box {
-  width: 210px;
-}
-
-.edge__icon {
-  display: block;
-  margin: 0 auto;
-}
-
-.edge__desc {
-  font-size: 16px;
-  font-weight: 200;
-  text-align: center;
-  line-height: 150%;
 }
