--- a/study-media/app/sass/blocks/button.scss
+++ b/study-media/app/sass/blocks/button.scss
@@ -22,6 +22,12 @@
   &--center {
     margin: auto;
   }
+  
+  &--small {
+    width: auto;
+    padding: 10px;
+    font-size: 13px;
+  }
 }
 
 .button__icon {
