--- a/study-media/app/sass/style.scss
+++ b/study-media/app/sass/style.scss
@@ -14,3 +14,6 @@
 @import 'blocks/start';
 @import 'blocks/advantages';
 @import 'blocks/slider';
+@import 'blocks/specialty';
+@import 'blocks/warranty';
+@import 'blocks/stages';
