--- a/study-media/app/sass/blocks/button.scss
+++ b/study-media/app/sass/blocks/button.scss
@@ -24,7 +24,8 @@
   }
   
   &--small {
-    width: auto;
+    width: 100px;
+    margin: 0 0 0 10px;
     padding: 10px;
     font-size: 13px;
   }
