--- a/study-media/app/sass/style.scss
+++ b/study-media/app/sass/style.scss
@@ -18,3 +18,5 @@
 @import 'blocks/warranty';
 @import 'blocks/stages';
 @import 'blocks/process';
+@import 'blocks/cost';
+@import 'blocks/reviews';
