--- a/study-media/app/sass/blocks/square.scss
+++ b/study-media/app/sass/blocks/square.scss
@@ -32,10 +32,15 @@
   
   &--rotate {
     left: auto;
-    right: 300px;
+    right: 250px;
     width: 180px;
     height: 180px;
     transform: rotate(45deg);
+  }
+  
+  &--small {
+    width: 150px;
+    height: 150px;
   }
 }
 
