--- a/study-media/app/sass/style.scss
+++ b/study-media/app/sass/style.scss
@@ -6,6 +6,7 @@
 
 @import 'blocks/header';
 @import 'blocks/nav';
+@import 'blocks/heading';
 @import 'blocks/title';
 @import 'blocks/button';
 @import 'blocks/edge';
