--- a/study-media/app/sass/blocks/advantages.scss
+++ b/study-media/app/sass/blocks/advantages.scss
@@ -2,31 +2,18 @@
   padding: 0 0 100px 0;
 }
 
-.advantages__name {
-  position: relative;
-  margin: 0 0 40px 0;
-  color: $main-red;
-  font-size: 70px;
-  font-weight: normal;
-  font-family: 'Sylfaen', sans-serif;
-  
-  &--small {
-    display: block;
-    font-size: 40px;
-  }
-}
-
 .advantages__inner {
   position: relative;
-  margin: 40px 0 30px 0;
-  z-index: 20;
+  height: 550px;
+  margin: 40px 0 80px 0;
+  // z-index: 1;
 }
 
 .advantages__controll {
   position: absolute;
   top: 50%;
-  width: 120px;
-  height: 60px;
+  width: 100px;
+  height: 40px;
   font-size: 0;
   border: none;
   background: $main-yellow;
@@ -34,7 +21,7 @@
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   transform: translateX(-50%);
   transition: 0.3s;
-  z-index: -1;
+  // z-index: -1;
   
   &:hover .advantages__icon {
     fill: $main-red;
@@ -43,19 +30,11 @@
   &--prev {
     left: -70px;
     transform: rotate(-90deg);
-    
-    &:hover {
-      left: -90px;
-    }
   }
   
   &--next {
     right: -70px;
     transform: rotate(90deg);
-    
-    &:hover {
-      right: -90px;
-    }
   }
 }
 
@@ -72,17 +51,25 @@
   }
 }
 
-.advantages__box {
+.advantages__slider {
   position: relative;
-  box-sizing: border-box;
-  display: none;
-  padding: 0 40px 30px 40px;
-  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.33);
+  @include clear-list;
   background: #fff;
+}
+
+.advantages__box {
+  position: absolute;
+  top: 10px;
+  right: -10px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 550px;
+  padding: 0 40px 30px 40px;
+  background: #fff;
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.33);
   overflow: hidden;
-  opacity: 0;
-  transition: 0.3s;
-  visibility: hidden;
+  opacity: 0.5;
+  transition: 0.5s;
   
   &::before {
     content: '';
@@ -96,9 +83,10 @@
   }
   
   &--show {
-    display: block;
+    top: 0;
+    right: 0;
     opacity: 1;
-    visibility: visible;
+    z-index: 1;
   }
 }
 
@@ -109,7 +97,7 @@
 
 .advantages__content {
   width: 600px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .advantages__title {
@@ -142,5 +130,5 @@
   width: 350px;
   height: auto;
   object-fit: cover;
-  z-index: 2;
+  z-index: 1;
 }
